# CloverLeaf

./: .gitignore  CMakeLists.txt  README.md  load_openmpi.sh  test.sh
InputDecks/: clover_bm1024.in  clover_bm1536.in  clover_bm16_300.in  clover_bm16_very_short.in  clover_bm2048.in  clover_bm256.in  clover_bm256_300.in  clover_bm2_short.in  clover_bm3072.in  clover_bm4_300.in  clover_bm64_300.in
cmake/: register_models.cmake
cuda/: PdV.cpp  accelerate.cpp  advec_cell.cpp  context.h  flux_calc.cpp  initialise.cpp  reset_field.cpp  update_tile_halo_kernel.cpp
driver/: PdV.h  accelerate.h  advec_cell.h  advec_mom.h  advection.h  build_field.h  calc_dt.h  clover_leaf.cpp  comms.cpp  comms.h  comms_kernel.h  definitions.cpp  definitions.h  field_summary.h  finalise.h  flux_calc.h  generate_chunk.h  hydro.cpp  hydro.h  ideal_gas.h  initialise.h  initialise_chunk.h  mpi_shim.cpp  mpi_shim.h  pack_kernel.h  read_input.cpp  read_input.h  report.cpp  report.h  reset_field.h  revert.h  shared.cpp  shared.h  start.cpp  start.h  timer.cpp  timer.h  timestep.cpp  timestep.h  update_halo.h  (+7 more)
hip/: PdV.cpp  accelerate.cpp  context.h  initialise.cpp  model.cmake
kokkos/: advec_cell.cpp  build_field.cpp  comms_kernel.cpp  context.h  field_summary.cpp  finalise.cpp  flux_calc.cpp  generate_chunk.cpp  ideal_gas.cpp  initialise.cpp  revert.cpp
omp/: accelerate.cpp  advec_cell.cpp  calc_dt.cpp  context.h  generate_chunk.cpp  ideal_gas.cpp  initialise.cpp  pack_kernel.cpp  revert.cpp  viscosity.cpp
omp-target/: PdV.cpp  advec_cell.cpp  comms_kernel.cpp  context.h  finalise.cpp  flux_calc.cpp  initialise.cpp  update_tile_halo_kernel.cpp
src/acc/: PdV.cpp  accelerate.cpp  advec_cell.cpp  advec_mom.cpp  build_field.cpp  calc_dt.cpp  comms_kernel.cpp  context.h  field_summary.cpp  finalise.cpp  flux_calc.cpp  generate_chunk.cpp  ideal_gas.cpp  initialise.cpp  initialise_chunk.cpp  model.cmake  pack_kernel.cpp  reset_field.cpp  revert.cpp  update_halo.cpp  update_tile_halo_kernel.cpp  viscosity.cpp
src/cuda/: PdV.cpp  advec_mom.cpp  build_field.cpp  calc_dt.cpp  comms_kernel.cpp  context.h  field_summary.cpp  finalise.cpp  generate_chunk.cpp  ideal_gas.cpp  model.cmake  update_halo.cpp
src/hip/: PdV.cpp  advec_cell.cpp  calc_dt.cpp  comms_kernel.cpp  context.h  field_summary.cpp  flux_calc.cpp  generate_chunk.cpp  initialise.cpp  initialise_chunk.cpp  pack_kernel.cpp  reset_field.cpp  revert.cpp  update_halo.cpp  viscosity.cpp
src/kokkos/: PdV.cpp  accelerate.cpp  advec_cell.cpp  advec_mom.cpp  calc_dt.cpp  comms_kernel.cpp  field_summary.cpp  finalise.cpp  flux_calc.cpp  initialise.cpp  initialise_chunk.cpp  model.cmake  pack_kernel.cpp  reset_field.cpp  update_halo.cpp  update_tile_halo_kernel.cpp  viscosity.cpp
src/omp/: PdV.cpp  advec_cell.cpp  advec_mom.cpp  build_field.cpp  comms_kernel.cpp  context.h  field_summary.cpp  finalise.cpp  flux_calc.cpp  initialise_chunk.cpp  model.cmake  reset_field.cpp  update_halo.cpp  update_tile_halo_kernel.cpp
src/omp-target/: PdV.cpp  advec_mom.cpp  build_field.cpp  calc_dt.cpp  comms_kernel.cpp  context.h  generate_chunk.cpp  ideal_gas.cpp  initialise.cpp  initialise_chunk.cpp  model.cmake  revert.cpp  update_halo.cpp  viscosity.cpp
src/serial/: PdV.cpp  accelerate.cpp  advec_cell.cpp  advec_mom.cpp  build_field.cpp  calc_dt.cpp  comms_kernel.cpp  field_summary.cpp  flux_calc.cpp  generate_chunk.cpp  ideal_gas.cpp  initialise.cpp  initialise_chunk.cpp  pack_kernel.cpp  reset_field.cpp  revert.cpp  update_halo.cpp  update_tile_halo_kernel.cpp  viscosity.cpp
src/std-indices/: PdV.cpp  accelerate.cpp  advec_cell.cpp  build_field.cpp  calc_dt.cpp  comms_kernel.cpp  context.h  dpl_shim.h  field_summary.cpp  flux_calc.cpp  ideal_gas.cpp  initialise.cpp  model.cmake  pack_kernel.cpp  reset_field.cpp  update_tile_halo_kernel.cpp
src/sycl-acc/: PdV.cpp  advec_mom.cpp  calc_dt.cpp  comms_kernel.cpp  context.h  field_summary.cpp  flux_calc.cpp  initialise.cpp  model.cmake  pack_kernel.cpp  sycl_reduction.hpp  update_halo.cpp  update_halo_1.cpp  update_halo_2.cpp  update_tile_halo_kernel.cpp  update_tile_halo_kernel_b.cpp  update_tile_halo_kernel_l.cpp  update_tile_halo_kernel_r.cpp  update_tile_halo_kernel_t.cpp
src/sycl-usm/: PdV.cpp  accelerate.cpp  advec_mom.cpp  build_field.cpp  calc_dt.cpp  comms_kernel.cpp  context.h  field_summary.cpp  finalise.cpp  flux_calc.cpp  generate_chunk.cpp  initialise.cpp  model.cmake  pack_kernel.cpp  reset_field.cpp  update_halo.cpp  update_halo_1.cpp  update_halo_2.cpp  update_tile_halo_kernel_b.cpp  update_tile_halo_kernel_l.cpp  update_tile_halo_kernel_r.cpp  update_tile_halo_kernel_t.cpp  viscosity.cpp
src/tbb/: PdV.cpp  accelerate.cpp  advec_cell.cpp  advec_mom.cpp  build_field.cpp  calc_dt.cpp  comms_kernel.cpp  context.h  field_summary.cpp  flux_calc.cpp  generate_chunk.cpp  ideal_gas.cpp  initialise.cpp  initialise_chunk.cpp  model.cmake  pack_kernel.cpp  reset_field.cpp  revert.cpp  update_halo.cpp  update_tile_halo_kernel.cpp  viscosity.cpp
std-indices/: advec_cell.cpp  advec_mom.cpp  comms_kernel.cpp  context.h  dpl_shim.h  generate_chunk.cpp  initialise.cpp  initialise_chunk.cpp  revert.cpp  update_halo.cpp  viscosity.cpp
sycl-acc/: PdV.cpp  accelerate.cpp  advec_cell.cpp  build_field.cpp  calc_dt.cpp  comms_kernel.cpp  context.h  finalise.cpp  generate_chunk.cpp  ideal_gas.cpp  initialise.cpp  initialise_chunk.cpp  reset_field.cpp  revert.cpp  update_halo.cpp  viscosity.cpp
sycl-usm/: PdV.cpp  advec_cell.cpp  context.h  ideal_gas.cpp  initialise.cpp  initialise_chunk.cpp  model.cmake  pack_kernel.cpp  reset_field.cpp  revert.cpp  update_tile_halo_kernel.cpp
